# onboarding

./: Cargo.toml  flake.nix
src/: main.rs
