[package]
name = "gay-onboarding"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
eyre = "0.6.12"
http = "1.1.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
